// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoticeBar should render default correctly 1`] = `
<div class="fx-notice-bar type--warning">
  <!---->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">
      title
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar should render prop leftIcon="SoundOutlined" correctly 1`] = `
<div class="fx-notice-bar type--warning">
  <div class="fx-notice-bar_left-icon"><svg aria-hidden="true" class="fx-icon">
      <use xlink:href="#icon-SoundOutlined"></use>
    </svg></div>
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">
      title
    </div>
  </div>
  <!---->
</div>
`;

exports[`NoticeBar should render prop mode="clickable" correctly 1`] = `
<div class="fx-notice-bar type--warning">
  <!---->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">
      title
    </div>
  </div>
  <div class="fx-notice-bar_right-icon"><svg aria-hidden="true" class="fx-icon">
      <use xlink:href="#icon-RightOutlined"></use>
    </svg></div>
</div>
`;

exports[`NoticeBar should render prop mode="closable" correctly 1`] = `
<div class="fx-notice-bar type--warning">
  <!---->
  <div class="fx-notice-bar_content">
    <div class="fx-notice-bar_content-inner">
      title
    </div>
  </div>
  <div class="fx-notice-bar_right-icon"><svg aria-hidden="true" class="fx-icon">
      <use xlink:href="#icon-CloseOutlined"></use>
    </svg></div>
</div>
`;
